# IMage

./: .gitignore  README.md  pyproject.toml
src/: hist.py  mage.py  range_slider.py  test.py  tools.py  workspace.py
src/imagemage/: __init__.py  mage.py  main.py  run.py
src/imagemage/tools/: hist.py
src/imagemage/widgets/: toolbar.py  utility_widgets.py  workspace.py
src/styles/: button.qss  hist.qss  tools.qss  window.qss
src/tools/: zoom.py
src/widgets/: image.py  menu.py  range_slider.py
