[project]
name = "imagemage"

# Dynamic version numbers from git
dynamic = ["version"]

# Tagline for Synthesizer
description = "A customisable image processing interface"

# A longer description of Synthesizer
readme = "README.md"

# Minimum Python version
requires-python = ">=3.8"

# The licence
license = {file = "LICENSE"}

# Project keywords
keywords = [
  "images",
  "processing",
  "fits",
  "RGB",
  "RGBA",
  "astronomy",
  "hsf5",
  "space telescope",
]

# Synthesizer authors
authors = [
  {name = "W. J. Roper", email = "w.roper@sussex.ac.uk" },
]

# Synthesizer maintainers
maintainers = [
  {name = "W. J. Roper", email = "w.roper@sussex.ac.uk" },
]

# Classifiers
classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",  # 3 Alpha/4 Beta/5 Production/Stable
  "Intended Audience :: Astronomers",
  "Topic :: Image Processing",
  "License :: GNU GENERAL PUBLIC LICENSE v3.0",

  # Supported Python versions
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

# Dependancies
dependencies = [
  "h5py",
  "numpy >= 1.23",
  "matplotlib",
  "pillow",
  "PyQt5",
]

# Optional dependencies for specific use cases.
[project.optional-dependencies]
dev = ["black"]
test = ["pytest"]

# Project urls
[project.urls]
"Homepage" = "https://github.com/WillJRoper/IMage"
"Bug Reports" = "https://github.com/WillJRoper/IMage/issues"
"Source" = "https://github.com/WillJRoper/IMage"
# "Documentation" = "https://flaresimulations.github.io/synthesizer/"

# Entry points
[project.scripts]  # Optional
image-mage="imagemage.run:main"

[tool.setuptools.package-data]
data = []

# Set up the build system
[build-system]

# Use latest setuotools, setuptools_scm for git versioning and
# numpy (numpy includes are needed for compilation of C extensions)
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# Make a version file at build time
version_file = "src/imagemage/_version.py"
